# python-wallet-service

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migration/: env.py
migration/versions/: e649fde87117_create_wallets_table.py
src/wallet_service/: __init__.py  main.py
src/wallet_service/api/: dependencies.py  routes.py  schemas.py
src/wallet_service/application/: contracts.py  services.py
src/wallet_service/domain/: entities.py  errors.py
src/wallet_service/infrastructure/: __init__.py  config.py
src/wallet_service/infrastructure/db/: models.py  repositories.py  session.py
tests/: fakes.py
tests/api/: test_wallet_routes.py
tests/integration/: conftest.py  test_wallet_concurrency.py  test_wallet_persistence.py
tests/unit/: test_wallet_service.py
